blocks/card.css
.card__image {
  height: 413px;
  width: 100%;
  object-fit: cover;
  display: block;
  border-radius: 8px;
}

.card__content {
  margin-top: 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.card__title {
  max-width: 355px;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  text-align: left;
  margin: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.card__like-button {
  background-image: url(../images/like.svg);
  width: 23px;
  height: 20px;
  border: none;
  background-color: transparent;
  opacity: 0.4;
}

.card__like-button:hover {
  cursor: pointer;
  opacity: 1;
}

@media screen and (max-width: 627px) {
  .card__image {
    height: 288px;
  }

  .card__title {
    font-size: 16px;
    line-height: 1;
  }
}

